fix(pmoc): remove dateutil dependency
